// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots PureInboxScreen Default 1`] = `
<storybook-wrapper>
  <app-pure-inbox-screen>
    
    <div
      class="page lists-show"
    >
      <nav>
        <h1
          class="title-page"
        >
          <span
            class="title-wrapper"
          >
            Taskbox
          </span>
        </h1>
      </nav>
      <app-task-list>
        <app-pure-task-list
          ng-reflect-tasks="[object Object],[object Object"
        >
          <div
            class="list-items"
          >
            <app-task
              ng-reflect-task="[object Object]"
            >
              <div
                class="TASK_INBOX list-item"
              >
                <label
                  class="checkbox"
                >
                  <input
                    disabled="true"
                    name="checked"
                    type="checkbox"
                  />
                  <span
                    aria-label="archiveTask-1"
                    class="checkbox-custom"
                  />
                </label>
                <div
                  class="title"
                >
                  <input
                    placeholder="Input title"
                    readonly="true"
                    type="text"
                  />
                </div>
                <div
                  class="actions"
                >
                  <a>
                    <span
                      aria-label="pinTask-1"
                      class="icon-star"
                    />
                  </a>
                  
                </div>
              </div>
            </app-task>
            <app-task
              ng-reflect-task="[object Object]"
            >
              <div
                class="TASK_INBOX list-item"
              >
                <label
                  class="checkbox"
                >
                  <input
                    disabled="true"
                    name="checked"
                    type="checkbox"
                  />
                  <span
                    aria-label="archiveTask-2"
                    class="checkbox-custom"
                  />
                </label>
                <div
                  class="title"
                >
                  <input
                    placeholder="Input title"
                    readonly="true"
                    type="text"
                  />
                </div>
                <div
                  class="actions"
                >
                  <a>
                    <span
                      aria-label="pinTask-2"
                      class="icon-star"
                    />
                  </a>
                  
                </div>
              </div>
            </app-task>
            <app-task
              ng-reflect-task="[object Object]"
            >
              <div
                class="TASK_INBOX list-item"
              >
                <label
                  class="checkbox"
                >
                  <input
                    disabled="true"
                    name="checked"
                    type="checkbox"
                  />
                  <span
                    aria-label="archiveTask-3"
                    class="checkbox-custom"
                  />
                </label>
                <div
                  class="title"
                >
                  <input
                    placeholder="Input title"
                    readonly="true"
                    type="text"
                  />
                </div>
                <div
                  class="actions"
                >
                  <a>
                    <span
                      aria-label="pinTask-3"
                      class="icon-star"
                    />
                  </a>
                  
                </div>
              </div>
            </app-task>
            <app-task
              ng-reflect-task="[object Object]"
            >
              <div
                class="TASK_INBOX list-item"
              >
                <label
                  class="checkbox"
                >
                  <input
                    disabled="true"
                    name="checked"
                    type="checkbox"
                  />
                  <span
                    aria-label="archiveTask-4"
                    class="checkbox-custom"
                  />
                </label>
                <div
                  class="title"
                >
                  <input
                    placeholder="Input title"
                    readonly="true"
                    type="text"
                  />
                </div>
                <div
                  class="actions"
                >
                  <a>
                    <span
                      aria-label="pinTask-4"
                      class="icon-star"
                    />
                  </a>
                  
                </div>
              </div>
            </app-task>
            
            
            
          </div>
        </app-pure-task-list>
      </app-task-list>
    </div>
    
  </app-pure-inbox-screen>
</storybook-wrapper>
`;

exports[`Storyshots PureInboxScreen Error 1`] = `
<storybook-wrapper>
  <app-pure-inbox-screen
    ng-reflect-error="true"
  >
    <div
      class="page lists-show"
    >
      <div
        class="wrapper-message"
      >
        <span
          class="icon-face-sad"
        />
        <div
          class="title-message"
        >
          Oh no!
        </div>
        <div
          class="subtitle-message"
        >
          Something went wrong
        </div>
      </div>
    </div>
    
    
  </app-pure-inbox-screen>
</storybook-wrapper>
`;

exports[`Storyshots PureInboxScreen With Interactions 1`] = `
<storybook-wrapper>
  <app-pure-inbox-screen>
    
    <div
      class="page lists-show"
    >
      <nav>
        <h1
          class="title-page"
        >
          <span
            class="title-wrapper"
          >
            Taskbox
          </span>
        </h1>
      </nav>
      <app-task-list>
        <app-pure-task-list
          ng-reflect-tasks="[object Object],[object Object"
        >
          <div
            class="list-items"
          >
            <app-task
              ng-reflect-task="[object Object]"
            >
              <div
                class="TASK_INBOX list-item"
              >
                <label
                  class="checkbox"
                >
                  <input
                    disabled="true"
                    name="checked"
                    type="checkbox"
                  />
                  <span
                    aria-label="archiveTask-1"
                    class="checkbox-custom"
                  />
                </label>
                <div
                  class="title"
                >
                  <input
                    placeholder="Input title"
                    readonly="true"
                    type="text"
                  />
                </div>
                <div
                  class="actions"
                >
                  <a>
                    <span
                      aria-label="pinTask-1"
                      class="icon-star"
                    />
                  </a>
                  
                </div>
              </div>
            </app-task>
            <app-task
              ng-reflect-task="[object Object]"
            >
              <div
                class="TASK_INBOX list-item"
              >
                <label
                  class="checkbox"
                >
                  <input
                    disabled="true"
                    name="checked"
                    type="checkbox"
                  />
                  <span
                    aria-label="archiveTask-2"
                    class="checkbox-custom"
                  />
                </label>
                <div
                  class="title"
                >
                  <input
                    placeholder="Input title"
                    readonly="true"
                    type="text"
                  />
                </div>
                <div
                  class="actions"
                >
                  <a>
                    <span
                      aria-label="pinTask-2"
                      class="icon-star"
                    />
                  </a>
                  
                </div>
              </div>
            </app-task>
            <app-task
              ng-reflect-task="[object Object]"
            >
              <div
                class="TASK_INBOX list-item"
              >
                <label
                  class="checkbox"
                >
                  <input
                    disabled="true"
                    name="checked"
                    type="checkbox"
                  />
                  <span
                    aria-label="archiveTask-3"
                    class="checkbox-custom"
                  />
                </label>
                <div
                  class="title"
                >
                  <input
                    placeholder="Input title"
                    readonly="true"
                    type="text"
                  />
                </div>
                <div
                  class="actions"
                >
                  <a>
                    <span
                      aria-label="pinTask-3"
                      class="icon-star"
                    />
                  </a>
                  
                </div>
              </div>
            </app-task>
            <app-task
              ng-reflect-task="[object Object]"
            >
              <div
                class="TASK_INBOX list-item"
              >
                <label
                  class="checkbox"
                >
                  <input
                    disabled="true"
                    name="checked"
                    type="checkbox"
                  />
                  <span
                    aria-label="archiveTask-4"
                    class="checkbox-custom"
                  />
                </label>
                <div
                  class="title"
                >
                  <input
                    placeholder="Input title"
                    readonly="true"
                    type="text"
                  />
                </div>
                <div
                  class="actions"
                >
                  <a>
                    <span
                      aria-label="pinTask-4"
                      class="icon-star"
                    />
                  </a>
                  
                </div>
              </div>
            </app-task>
            
            
            
          </div>
        </app-pure-task-list>
      </app-task-list>
    </div>
    
  </app-pure-inbox-screen>
</storybook-wrapper>
`;

exports[`Storyshots PureTaskList Default 1`] = `
<storybook-wrapper>
  <div
    style="margin: 3em;"
  >
    <app-pure-task-list
      ng-reflect-tasks="[object Object],[object Object"
    >
      <div
        class="list-items"
      >
        <app-task
          ng-reflect-task="[object Object]"
        >
          <div
            class="TASK_INBOX list-item"
          >
            <label
              class="checkbox"
            >
              <input
                disabled="true"
                name="checked"
                type="checkbox"
              />
              <span
                aria-label="archiveTask-1"
                class="checkbox-custom"
              />
            </label>
            <div
              class="title"
            >
              <input
                placeholder="Input title"
                readonly="true"
                type="text"
              />
            </div>
            <div
              class="actions"
            >
              <a>
                <span
                  aria-label="pinTask-1"
                  class="icon-star"
                />
              </a>
              
            </div>
          </div>
        </app-task>
        <app-task
          ng-reflect-task="[object Object]"
        >
          <div
            class="TASK_INBOX list-item"
          >
            <label
              class="checkbox"
            >
              <input
                disabled="true"
                name="checked"
                type="checkbox"
              />
              <span
                aria-label="archiveTask-2"
                class="checkbox-custom"
              />
            </label>
            <div
              class="title"
            >
              <input
                placeholder="Input title"
                readonly="true"
                type="text"
              />
            </div>
            <div
              class="actions"
            >
              <a>
                <span
                  aria-label="pinTask-2"
                  class="icon-star"
                />
              </a>
              
            </div>
          </div>
        </app-task>
        <app-task
          ng-reflect-task="[object Object]"
        >
          <div
            class="TASK_INBOX list-item"
          >
            <label
              class="checkbox"
            >
              <input
                disabled="true"
                name="checked"
                type="checkbox"
              />
              <span
                aria-label="archiveTask-3"
                class="checkbox-custom"
              />
            </label>
            <div
              class="title"
            >
              <input
                placeholder="Input title"
                readonly="true"
                type="text"
              />
            </div>
            <div
              class="actions"
            >
              <a>
                <span
                  aria-label="pinTask-3"
                  class="icon-star"
                />
              </a>
              
            </div>
          </div>
        </app-task>
        <app-task
          ng-reflect-task="[object Object]"
        >
          <div
            class="TASK_INBOX list-item"
          >
            <label
              class="checkbox"
            >
              <input
                disabled="true"
                name="checked"
                type="checkbox"
              />
              <span
                aria-label="archiveTask-4"
                class="checkbox-custom"
              />
            </label>
            <div
              class="title"
            >
              <input
                placeholder="Input title"
                readonly="true"
                type="text"
              />
            </div>
            <div
              class="actions"
            >
              <a>
                <span
                  aria-label="pinTask-4"
                  class="icon-star"
                />
              </a>
              
            </div>
          </div>
        </app-task>
        <app-task
          ng-reflect-task="[object Object]"
        >
          <div
            class="TASK_INBOX list-item"
          >
            <label
              class="checkbox"
            >
              <input
                disabled="true"
                name="checked"
                type="checkbox"
              />
              <span
                aria-label="archiveTask-5"
                class="checkbox-custom"
              />
            </label>
            <div
              class="title"
            >
              <input
                placeholder="Input title"
                readonly="true"
                type="text"
              />
            </div>
            <div
              class="actions"
            >
              <a>
                <span
                  aria-label="pinTask-5"
                  class="icon-star"
                />
              </a>
              
            </div>
          </div>
        </app-task>
        <app-task
          ng-reflect-task="[object Object]"
        >
          <div
            class="TASK_INBOX list-item"
          >
            <label
              class="checkbox"
            >
              <input
                disabled="true"
                name="checked"
                type="checkbox"
              />
              <span
                aria-label="archiveTask-6"
                class="checkbox-custom"
              />
            </label>
            <div
              class="title"
            >
              <input
                placeholder="Input title"
                readonly="true"
                type="text"
              />
            </div>
            <div
              class="actions"
            >
              <a>
                <span
                  aria-label="pinTask-6"
                  class="icon-star"
                />
              </a>
              
            </div>
          </div>
        </app-task>
        
        
        
      </div>
    </app-pure-task-list>
    
  </div>
</storybook-wrapper>
`;

exports[`Storyshots PureTaskList Empty 1`] = `
<storybook-wrapper>
  <div
    style="margin: 3em;"
  >
    <app-pure-task-list
      ng-reflect-loading="false"
      ng-reflect-tasks=""
    >
      <div
        class="list-items"
      >
        
        <div
          class="wrapper-message"
        >
          <span
            class="icon-check"
          />
          <div
            class="title-message"
          >
            You have no tasks
          </div>
          <div
            class="subtitle-message"
          >
            Sit back and relax
          </div>
        </div>
        
        
      </div>
    </app-pure-task-list>
    
  </div>
</storybook-wrapper>
`;

exports[`Storyshots PureTaskList Loading 1`] = `
<storybook-wrapper>
  <div
    style="margin: 3em;"
  >
    <app-pure-task-list
      ng-reflect-loading="true"
      ng-reflect-tasks=""
    >
      <div
        class="list-items"
      >
        
        
        <div>
          <div
            class="loading-item"
          >
            <span
              class="glow-checkbox"
            />
            <span
              class="glow-text"
            >
              <span>
                Loading
              </span>
              <span>
                cool
              </span>
              <span>
                state
              </span>
            </span>
          </div>
          <div
            class="loading-item"
          >
            <span
              class="glow-checkbox"
            />
            <span
              class="glow-text"
            >
              <span>
                Loading
              </span>
              <span>
                cool
              </span>
              <span>
                state
              </span>
            </span>
          </div>
          <div
            class="loading-item"
          >
            <span
              class="glow-checkbox"
            />
            <span
              class="glow-text"
            >
              <span>
                Loading
              </span>
              <span>
                cool
              </span>
              <span>
                state
              </span>
            </span>
          </div>
          <div
            class="loading-item"
          >
            <span
              class="glow-checkbox"
            />
            <span
              class="glow-text"
            >
              <span>
                Loading
              </span>
              <span>
                cool
              </span>
              <span>
                state
              </span>
            </span>
          </div>
          <div
            class="loading-item"
          >
            <span
              class="glow-checkbox"
            />
            <span
              class="glow-text"
            >
              <span>
                Loading
              </span>
              <span>
                cool
              </span>
              <span>
                state
              </span>
            </span>
          </div>
          <div
            class="loading-item"
          >
            <span
              class="glow-checkbox"
            />
            <span
              class="glow-text"
            >
              <span>
                Loading
              </span>
              <span>
                cool
              </span>
              <span>
                state
              </span>
            </span>
          </div>
          
        </div>
        
      </div>
    </app-pure-task-list>
    
  </div>
</storybook-wrapper>
`;

exports[`Storyshots PureTaskList With Pinned Tasks 1`] = `
<storybook-wrapper>
  <div
    style="margin: 3em;"
  >
    <app-pure-task-list
      ng-reflect-tasks="[object Object],[object Object"
    >
      <div
        class="list-items"
      >
        <app-task
          ng-reflect-task="[object Object]"
        >
          <div
            class="TASK_PINNED list-item"
          >
            <label
              class="checkbox"
            >
              <input
                disabled="true"
                name="checked"
                type="checkbox"
              />
              <span
                aria-label="archiveTask-6"
                class="checkbox-custom"
              />
            </label>
            <div
              class="title"
            >
              <input
                placeholder="Input title"
                readonly="true"
                type="text"
              />
            </div>
            <div
              class="actions"
            >
              <a>
                <span
                  aria-label="pinTask-6"
                  class="icon-star"
                />
              </a>
              
            </div>
          </div>
        </app-task>
        <app-task
          ng-reflect-task="[object Object]"
        >
          <div
            class="TASK_INBOX list-item"
          >
            <label
              class="checkbox"
            >
              <input
                disabled="true"
                name="checked"
                type="checkbox"
              />
              <span
                aria-label="archiveTask-1"
                class="checkbox-custom"
              />
            </label>
            <div
              class="title"
            >
              <input
                placeholder="Input title"
                readonly="true"
                type="text"
              />
            </div>
            <div
              class="actions"
            >
              <a>
                <span
                  aria-label="pinTask-1"
                  class="icon-star"
                />
              </a>
              
            </div>
          </div>
        </app-task>
        <app-task
          ng-reflect-task="[object Object]"
        >
          <div
            class="TASK_INBOX list-item"
          >
            <label
              class="checkbox"
            >
              <input
                disabled="true"
                name="checked"
                type="checkbox"
              />
              <span
                aria-label="archiveTask-2"
                class="checkbox-custom"
              />
            </label>
            <div
              class="title"
            >
              <input
                placeholder="Input title"
                readonly="true"
                type="text"
              />
            </div>
            <div
              class="actions"
            >
              <a>
                <span
                  aria-label="pinTask-2"
                  class="icon-star"
                />
              </a>
              
            </div>
          </div>
        </app-task>
        <app-task
          ng-reflect-task="[object Object]"
        >
          <div
            class="TASK_INBOX list-item"
          >
            <label
              class="checkbox"
            >
              <input
                disabled="true"
                name="checked"
                type="checkbox"
              />
              <span
                aria-label="archiveTask-3"
                class="checkbox-custom"
              />
            </label>
            <div
              class="title"
            >
              <input
                placeholder="Input title"
                readonly="true"
                type="text"
              />
            </div>
            <div
              class="actions"
            >
              <a>
                <span
                  aria-label="pinTask-3"
                  class="icon-star"
                />
              </a>
              
            </div>
          </div>
        </app-task>
        <app-task
          ng-reflect-task="[object Object]"
        >
          <div
            class="TASK_INBOX list-item"
          >
            <label
              class="checkbox"
            >
              <input
                disabled="true"
                name="checked"
                type="checkbox"
              />
              <span
                aria-label="archiveTask-4"
                class="checkbox-custom"
              />
            </label>
            <div
              class="title"
            >
              <input
                placeholder="Input title"
                readonly="true"
                type="text"
              />
            </div>
            <div
              class="actions"
            >
              <a>
                <span
                  aria-label="pinTask-4"
                  class="icon-star"
                />
              </a>
              
            </div>
          </div>
        </app-task>
        <app-task
          ng-reflect-task="[object Object]"
        >
          <div
            class="TASK_INBOX list-item"
          >
            <label
              class="checkbox"
            >
              <input
                disabled="true"
                name="checked"
                type="checkbox"
              />
              <span
                aria-label="archiveTask-5"
                class="checkbox-custom"
              />
            </label>
            <div
              class="title"
            >
              <input
                placeholder="Input title"
                readonly="true"
                type="text"
              />
            </div>
            <div
              class="actions"
            >
              <a>
                <span
                  aria-label="pinTask-5"
                  class="icon-star"
                />
              </a>
              
            </div>
          </div>
        </app-task>
        
        
        
      </div>
    </app-pure-task-list>
    
  </div>
</storybook-wrapper>
`;

exports[`Storyshots Task Archived 1`] = `
<storybook-wrapper>
  <app-task
    ng-reflect-task="[object Object]"
  >
    <div
      class="TASK_ARCHIVED list-item"
    >
      <label
        class="checkbox"
      >
        <input
          checked=""
          disabled="true"
          name="checked"
          type="checkbox"
        />
        <span
          aria-label="archiveTask-1"
          class="checkbox-custom"
        />
      </label>
      <div
        class="title"
      >
        <input
          placeholder="Input title"
          readonly="true"
          type="text"
        />
      </div>
      <div
        class="actions"
      >
        
      </div>
    </div>
  </app-task>
</storybook-wrapper>
`;

exports[`Storyshots Task Default 1`] = `
<storybook-wrapper>
  <app-task
    ng-reflect-task="[object Object]"
  >
    <div
      class="TASK_INBOX list-item"
    >
      <label
        class="checkbox"
      >
        <input
          disabled="true"
          name="checked"
          type="checkbox"
        />
        <span
          aria-label="archiveTask-1"
          class="checkbox-custom"
        />
      </label>
      <div
        class="title"
      >
        <input
          placeholder="Input title"
          readonly="true"
          type="text"
        />
      </div>
      <div
        class="actions"
      >
        <a>
          <span
            aria-label="pinTask-1"
            class="icon-star"
          />
        </a>
        
      </div>
    </div>
  </app-task>
</storybook-wrapper>
`;

exports[`Storyshots Task Pinned 1`] = `
<storybook-wrapper>
  <app-task
    ng-reflect-task="[object Object]"
  >
    <div
      class="TASK_PINNED list-item"
    >
      <label
        class="checkbox"
      >
        <input
          disabled="true"
          name="checked"
          type="checkbox"
        />
        <span
          aria-label="archiveTask-1"
          class="checkbox-custom"
        />
      </label>
      <div
        class="title"
      >
        <input
          placeholder="Input title"
          readonly="true"
          type="text"
        />
      </div>
      <div
        class="actions"
      >
        <a>
          <span
            aria-label="pinTask-1"
            class="icon-star"
          />
        </a>
        
      </div>
    </div>
  </app-task>
</storybook-wrapper>
`;
